# CMakeList.txt : CMake project for MDI_CAILLEAU_MARIE, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (MDI_CAILLEAU_MARIE "MDI_CAILLEAU_MARIE.cpp" "MDI_CAILLEAU_MARIE.h")

# TODO: Add tests and install targets if needed.
